--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,7 @@
 [build]
-  command = "cd adobe-impact-dashboard && npm run build"
-
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
+  base = "adobe-impact-dashboard"
+  command = "npm run build"
+  publish = ".next"
 
 [build.environment]
   NODE_VERSION = "18" 
